@@ -1,3 +1,9 @@
+2007-09-03  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* dbfopen.c: Simplify DBFReadTuple() to avoid use of static tuple.
+	Note that this means DBFReadTuple() results are only valid till the 
+	next record is read for any reason.
+
 2007-06-21  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* shpopen.c: Fix for SHPRewind() for "contact at one vertex" 
